--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -7,3 +7,4 @@ tasks:
       git config --global user.signingkey 793731EFDA37E4BC
       git config --global commit.gpgsign true
       git config --global tag.gpgsign true
+      export GPG_TTY=$(tty)
