--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,7 +3,7 @@ tasks:
       [[ ! -z $GNUGPG  ]] &&
       cd ~ &&
       rm -rf .gnupg &&
-      echo $GNUGPG | base64 -d | tar --no-same-owner -xzvf - &&
+      echo $GNUGPG | base64 -d | tar --no-same-owner -xzvfC / - &&
       git config --global user.signingkey 793731EFDA37E4BC &&
       git config --global commit.gpgsign true &&
       git config --global tag.gpgsign true &&
