--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,8 +1,8 @@
 tasks:
   - before: >
       [[ ! -z $GNUGPG  ]] &&
-      cd ~ &&
-      rm -rf .gnupg &&
+      rm -rf ~/.gnupg &&
+      cd / &&
       echo $GNUGPG | base64 -d | tar --no-same-owner -xzvfC / - &&
       git config --global user.signingkey 793731EFDA37E4BC &&
       git config --global commit.gpgsign true &&
