--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -11,6 +11,9 @@ tasks:
       git config --global commit.gpgsign true &&
       git config --global tag.gpgsign true &&
       cd /workspace/jmeter-alpine
+  - name: Open terminal with correct TTY
+    command: export GPG_TTY=$(tty)
+    openMode: tab-after
 vscode:
   extensions:
     - hashicorp.hcl
